bug done
